--- a/src/Gui/CMakeLists.txt
+++ b/src/Gui/CMakeLists.txt
@@ -26,6 +26,10 @@ if (BUILD_OPENVR)
     add_definitions(-DBUILD_OPENVR )
 endif(BUILD_OPENVR)
 
+if (BUILD_OPENXR)
+    add_definitions(-DBUILD_OPENXR )
+endif(BUILD_OPENXR)
+
 if (BUILD_ADDONMGR)
     add_definitions(-DBUILD_ADDONMGR )
 endif(BUILD_ADDONMGR)
@@ -184,6 +188,22 @@ IF(OpenVR_FOUND)
         ${OpenVR_LIBRARIES}
     )
 ENDIF(OpenVR_FOUND)
+
+IF(OpenXR_FOUND)
+    add_definitions(-DOPENXR_FOUND)
+    include_directories(
+        ${OPENXR_OPENXR_INCLUDE_DIR}
+    )
+    list(APPEND FreeCADGui_LIBS
+        ${OPENXR_loader_LIBRARY}
+    )
+    find_package(X11 QUIET)
+    if (X11_FOUND)
+      list(APPEND FreeCADGui_LIBS
+          ${X11_X11_LIB}
+      )
+    endif(X11_FOUND)
+ENDIF(OpenXR_FOUND)
 
 if(FREECAD_USE_SHIBOKEN)
 if(SHIBOKEN_INCLUDE_DIR)
@@ -856,8 +876,10 @@ SET(View3D_CPP_SRCS
     View3DInventorViewer.cpp
     View3DInventorRiftViewer.cpp
     View3DInventorOpenVRViewer.cpp
+    View3DInventorXRViewer.cpp
     CoinRiftWidget.cpp
     CoinOpenVRWidget.cpp
+    CoinXRWidget.cpp
     View3DPy.cpp
     View3DViewerPy.cpp
     NaviCube.cpp
@@ -878,8 +900,10 @@ SET(View3D_SRCS
     View3DPy.h
     View3DInventorRiftViewer.h
     View3DInventorOpenVRViewer.h
+    View3DInventorXRViewer.h
     CoinRiftWidget.h
     CoinOpenVRWidget.h
+    CoinXRWidget.h
     View3DViewerPy.h
     NaviCube.h
 )
