--- a/src/Gui/CMakeLists.txt
+++ b/src/Gui/CMakeLists.txt
@@ -879,6 +879,7 @@ SET(View3D_CPP_SRCS
     CoinRiftWidget.cpp
     CoinOpenVRWidget.cpp
     CoinXRWidget.cpp
+    XRInteraction.cpp
     View3DPy.cpp
     View3DViewerPy.cpp
     NaviCube.cpp
@@ -903,6 +904,7 @@ SET(View3D_SRCS
     CoinRiftWidget.h
     CoinOpenVRWidget.h
     CoinXRWidget.h
+    XRInteraction.h
     View3DViewerPy.h
     NaviCube.h
 )
